2009-08-29  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes for automatic non-compositing feature and NB#135950.

	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify):
	Unredirect an unredirected client again if it was reparented, because
	it has caused an implicit redirection again.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): (Un)redirect the
	client window or frame depending on fullscreenness. Remove the server
	grab, it does not seem to be necessary.
	* matchbox/core/mb-wm-client.c (mb_wm_client_set_state): Do not assign
	a bitmask to 'old_state' because it is compared with Bool value later,
	using '==' operator.  This saves us an extra reparenting (and
	redrawing) when the browser window is mapped in fullscreen.

2009-08-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.59

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]: Add unredirected
	member to track unredirection of more than one client.
	(mb_wm_comp_mgr_clutter_client_is_unredirected): New.

2009-08-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.58

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]
	(mb_wm_comp_mgr_clutter_set_client_redirection): Make public and
	(un)redirect child windows as well.
	(mb_wm_comp_mgr_clutter_handle_damage): Track damage based on new
	'damage_handling_off' priv member.
	Almost Fixes: NB#126626

2009-08-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Made frequently used functions inline.  Based on measurements
	this saves hundreds of function calls during a map.

	* matchbox/core/mb-wm-atoms.c
	* matchbox/core/mb-wm-object.c
	* matchbox/core/mb-wm-object.h:
	  Replaced mb_wm_object_get_class() with MB_WM_OBJECT_GET_CLASS().
	* matchbox/core/mb-wm-client.h:
	  Made mb_wm_client_get_layout_hints() and
	  mb_wm_client_get_transient_for() inline.
	* matchbox/core/mb-wm-client.c:
	  Use MB_WM_OBJECT_GET_CLASS().
	* matchbox/client-types/mb-wm-client-menu.c:
	  Likewise.
